--- a/index.html
+++ b/index.html
@@ -543,7 +543,8 @@ _iub.csConfiguration = {"siteId":4058605,"cookiePolicyId":93911980,"lang":"pt-BR
                   <ul class="footer__links">
                      <li>
                         <address class="footer__info">
-                           RUA ANTONIO GONCALVES DA SILVA PATATIVA DO ASSARE, SN PREDIO PROPRIO. SEDE. <br>
+                          Rua Antonio Gonçalves da Silva Patativa do Assaré<br>
+                           SN PREDIO PROPRIO. SEDE. <br>
                            63170-000, Araripe - CE, Brasil
                         </address>
                      </li>
@@ -555,6 +556,7 @@ _iub.csConfiguration = {"siteId":4058605,"cookiePolicyId":93911980,"lang":"pt-BR
                      </li>
                   </ul>
                </div>
+               <br>
                 <div>
                   <h3 class="footer__title">Nossas Redes</h3>
                   <div class="footer__social">
